crates/aranya-policy-lang/tests/data/error_line_number_in_chunks/two_chunk_syntax_error.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
Syntax error: line 11 column 9:   --> 11:9
   |
11 |     let = 2
   |         ^---
   |
   = expected identifier
